--- a/Style.css
+++ b/Style.css
@@ -4,7 +4,7 @@
    }
 
    .Container {
-      
+      background: black;
        width: 100vw;
        display: flex;
        flex-direction: column;
@@ -31,8 +31,8 @@
    }
 
    .tools .color-picker {
-       height: 20px;
-       width: 20px;
+       height: 30px;
+       width: 30px;
        border: 2px solid white;
        cursor: pointer;
        display: inline-block;
